# latest_news_headlines_sentiment-analysis

./: .gitignore  DATAREADME.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  sentiment_Analysis_Latest_Headlines.ipynb
.github/workflows/: ci.yml
backend/: app.py
src/: dashboard.py  visualize_sentiment.py
